# advent-of-code-2022

./: advent-of-code-2022.cabal  flake.nix  hie.yaml
src/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs
